<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chat_Screen"
    android:background="@drawable/chat"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:layout_above="@id/bottom_layout"
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeText"
        android:layout_centerInParent="true"
        android:text="@string/welcomeText"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_layout"
        android:padding="8dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/message_edit_text"
            android:layout_centerInParent="true"
            android:hint="@string/messageHint"
            android:background="@drawable/round_corner_2"
            android:layout_toStartOf="@id/sendButton"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:autofillHints="" />

        <ImageButton
            android:contentDescription="@string/send"
            android:id="@+id/sendButton"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:src="@drawable/send"
            android:background="@color/transparent"
            android:visibility="gone"
            />

        <ImageButton
            android:contentDescription="@string/mic"
            android:id="@+id/mic"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:src="@drawable/mic"
            android:background="@color/transparent"
            />

    </RelativeLayout>


</RelativeLayout>